# aithon

./: .gitignore  README.md  Testimony.md  aithon.ai  complex_ai.py  complex_clean.py  example.ai  pyproject.toml
aithon/: __init__.py  __main__.py  aithon.py  complex.py  complex_ai.py  example_ai.py
aithon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
scripts/: aithon_ai.py  example.py
